force-app/main/default/objects/Service_Subscription__c/Service_Subscription__c.object-meta.xml
<CustomObject>
    <label>Service Subscription</label>
    <pluralLabel>Service Subscriptions</pluralLabel>
    <description
  >Represents an active managed service that a customer account currently subscribes to (Internet, Voice, Managed Security, or Cloud Backup), including its recurring revenue value.</description>
    <sharingModel>Private</sharingModel>
    <nameField>
        <label>Subscription Number</label>
        <type>AutoNumber</type>
        <displayFormat>SUB-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
</CustomObject>