force-app/main/default/objects/Service_Subscription__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Subscriptions</relationshipLabel>
    <relationshipName>Service_Subscriptions</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description
  >The customer account holding this service subscription.</description>
</CustomField>