force-app/main/default/objects/Service_Subscription__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <type>Lookup</type>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Service Subscriptions</relationshipLabel>
    <relationshipName>Service_Subscriptions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The installed asset (e.g. provisioned equipment) associated with this subscription, when applicable.</description>
</CustomField>