force-app/main/default/objects/Service_Subscription__c/fields/Monthly_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Recurring_Revenue__c</fullName>
    <label>Monthly Recurring Revenue</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description
  >Recurring monthly value of this service subscription, used for MRR reporting.</description>
</CustomField>