force-app/main/default/objects/Service_Subscription__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
            </value>
            <value>
                <fullName>Managed Security</fullName>
            </value>
            <value>
                <fullName>Cloud Backup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description
  >The category of managed service this subscription represents.</description>
</CustomField>